--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -152,9 +152,9 @@ jobs:
           rm -fr *.p12
           npm install
           npm run set-target-x64
-          echo "::set-env name=KEY_CHAIN::$KEY_CHAIN"
-          echo "::set-env name=CERTIFICATE_P12::$CERTIFICATE_P12"
-          echo "::set-env name=CERTIFICATE_APPLICATION_P12::$CERTIFICATE_APPLICATION_P12"
+          echo "KEY_CHAIN=$KEY_CHAIN" >> $GITHUB_ENV
+          echo "CERTIFICATE_P12=$CERTIFICATE_P12" >> $GITHUB_ENV
+          echo "CERTIFICATE_APPLICATION_P12=$CERTIFICATE_APPLICATION_P12" >> $GITHUB_ENV
 
       - name: Build macOS desktop app
         uses: nick-fields/retry@v2
