--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -1,9 +1,9 @@
-name: Leapp Desktop App CD
+name: Leapp Desktop App Nightly CD
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 env:
   CERTIFICATE_APPLICATION_OSX_P12: ${{ secrets.CERTIFICATE_APPLICATION_OSX_P12 }}
@@ -17,42 +17,24 @@ env:
   WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
 
 jobs:
-  tag-validation:
-    outputs:
-      validator: ${{ steps.validator.outputs.VALID_TAG }}
-      tag-version: ${{ steps.validator.outputs.TAG_VERSION }}
-    runs-on: macos-latest
+  clean-nightly-latest:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          fetch-depth: 1
-          ref: master
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
 
-      - name: Check Tag Validity
-        id: validator
+      - name: Move draft to nightly latest
         run: |
-          git fetch
-          LOG=$(git log --format="%H" -n 1)
-          TAG=$(git tag --contains $LOG)
-          REGEX="^v[0-9]+\.[0-9]+.[0-9]+"
-          if [[ $TAG =~ $REGEX ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
-          echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
-          echo "::set-output name=TAG_VERSION::$TAG"
+          aws s3 rm "${{ env.S3_BUCKET }}/nightly/latest-temp" --recursive
 
-      - name: If valid tag set
-        if: steps.validator.outputs.VALID_TAG == 1
-        run: |
-          echo "Valid Tag Found - Building Desktop App..."
-
-      - name: If not valid tag set
-        if: steps.validator.outputs.VALID_TAG != 1
-        run: |
-          echo "Not a Desktop App Release Tag or Invalid one Found - Exiting..."
   build-win:
     runs-on: windows-2022
-    needs: [ tag-validation ]
-    if: needs.tag-validation.outputs.validator == 1
+    needs: [ clean-nightly-latest ]
     steps:
       - name: Prepare GIT
         shell: bash
@@ -73,21 +55,22 @@ jobs:
         shell: bash
         run: npm run bootstrap
 
-      - name: Build Win desktop app
+      - name: Build Win desktop app (nightly)
         shell: bash
         run: |
           cd packages/desktop-app
           WIN_CERTIFICATE=windows_sign_certificate.pfx
           echo "Recreate the window certificate from the secure environment variable"
           echo "${{ env.WIN_CERTIFICATE }}" | base64 --decode > $WIN_CERTIFICATE
+
           npm install
-          npm run release-win
+          npm run nightly win
           rm -Rf ./release/win-unpacked
           rm -Rf ./release/.cache
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
+
+          TAG_VERSION=$(cat nightly-version)
           rm "./release/Leapp-$TAG_VERSION-win.zip"
           powershell "Compress-Archive './release/Leapp Setup $TAG_VERSION.exe' './release/Leapp-$TAG_VERSION-win.zip'"
 
@@ -98,26 +81,27 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Release draft to S3
+      - name: Release draft to S3 (nightly)
         shell: bash
         run: |
           cd packages/desktop-app
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
+
+          TAG_VERSION=$(cat nightly-version)
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-linux:
     runs-on: ubuntu-latest
-    needs: [ tag-validation ]
-    if: needs.tag-validation.outputs.validator == 1
+    needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build Linux desktop app
+      - name: Build Linux desktop app (nightly)
         run: |
           cd packages/desktop-app
+
           npm install
-          npm run release-linux
+          npm run nightly linux
           rm -Rf ./release/linux-unpacked
           rm -Rf ./release/.cache
           rm -Rf ./release/builder-debug.yml
@@ -130,21 +114,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Release draft to S3
+      - name: Release draft to S3 (nightly)
         run: |
           cd packages/desktop-app
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
+          TAG_VERSION=$(cat nightly-version)
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-macos-x64:
     runs-on: macos-latest
-    needs: [ tag-validation ]
-    if: needs.tag-validation.outputs.validator == 1
+    needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build macOS x64 desktop app
+      - name: Build macOS x64 desktop app (nightly)
         uses: nick-fields/retry@v2
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
@@ -175,9 +158,10 @@ jobs:
             echo "security set-key-partition-list"
             security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
             rm -fr *.p12
+
             npm install
             npm run set-target-x64
-            npm run release-mac
+            npm run nightly mac
 
       - name: Clean build
         run: |
@@ -187,8 +171,7 @@ jobs:
           rm -Rf ./release/.cache
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
+          TAG_VERSION=$(cat nightly-version)
           rm "./release/Leapp-$TAG_VERSION-mac.zip"
           rm "./release/Leapp-$TAG_VERSION-mac.zip.blockmap"
           zip "./release/Leapp-$TAG_VERSION-mac.zip" "./release/Leapp-$TAG_VERSION.dmg"
@@ -200,21 +183,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Release draft to S3
+      - name: Release draft to S3 (nightly)
         run: |
           cd packages/desktop-app
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
+          TAG_VERSION=$(cat nightly-version)
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-macos-arm:
     runs-on: macos-latest
-    needs: [ tag-validation, build-macos-x64 ]
-    if: needs.tag-validation.outputs.validator == 1
+    needs: [ clean-nightly-latest, build-macos-x64 ]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build macOS arm64 desktop app
+      - name: Build macOS arm64 desktop app (nightly)
         uses: nick-fields/retry@v2
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
@@ -245,9 +227,10 @@ jobs:
             echo "security set-key-partition-list"
             security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
             rm -fr *.p12
+
             npm install
             npm run set-target-arm64
-            npm run release-mac
+            npm run nightly mac
 
       - name: Clean build
         run: |
@@ -258,8 +241,7 @@ jobs:
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
           rm -Rf ./release/mac-arm64
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
+          TAG_VERSION=$(cat nightly-version)
           rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip"
           rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip.blockmap"
           zip "./release/Leapp-$TAG_VERSION-mac-arm64.zip" "./release/Leapp-$TAG_VERSION-arm64.dmg"
@@ -271,18 +253,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Release draft to S3
+      - name: Release draft to S3 (nightly)
         run: |
           cd packages/desktop-app
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
+          TAG_VERSION=$(cat nightly-version)
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
-  publish-draft:
+  publish-nightly-draft:
     runs-on: ubuntu-latest
-    environment: prod
-    needs: [ tag-validation, build-linux, build-win, build-macos-arm, build-macos-x64 ]
-    if: needs.tag-validation.outputs.validator == 1
+    needs: [ build-linux, build-win, build-macos-arm, build-macos-x64 ]
     steps:
 
       - name: Configure AWS credentials
@@ -292,62 +272,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Move draft to latest
+      - name: Move draft to nightly latest
         run: |
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          aws s3 rm "${{ env.S3_BUCKET }}/latest" --recursive
-          aws s3 cp "${{ env.S3_BUCKET }}/$TAG_VERSION/" "${{ env.S3_BUCKET }}/latest" --recursive
-
-  publish-changelog:
-    runs-on: ubuntu-latest
-    environment: prod
-    needs: [ publish-draft ]
-    if: needs.tag-validation.outputs.validator == 1
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Publish changelog
-        run: |
-          aws s3 cp CHANGELOG.md "${{ env.S3_BUCKET }}/"
-
-  invalidate-distribution:
-    runs-on: ubuntu-latest
-    environment: prod
-    needs: [ publish-changelog ]
-    if: needs.tag-validation.outputs.validator == 1
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Invalidate distribution
-        run: |
-          aws cloudfront create-invalidation --distribution-id ${{ env.DISTRIBUTION_ID }} --paths "/*"
-
-  publish-github-release:
-    runs-on: ubuntu-latest
-    needs: [ invalidate-distribution, tag-validation ]
-    if: needs.tag-validation.outputs.validator == 1
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GH_TOKEN }}
-          body: "Full changelog & Downloads ⇒ https://www.leapp.cloud/releases"
-          tag: ${{ needs.tag-validation.outputs.tag-version }}
-
+          aws s3 rm "${{ env.S3_BUCKET }}/nightly/latest" --recursive
+          aws s3 mv "${{ env.S3_BUCKET }}/nightly/latest-temp/" "${{ env.S3_BUCKET }}/nightly/latest" --recursive
