--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -28,7 +28,8 @@
     "release-win": "gushio gushio/target-release.js \"configuration production\" win",
     "release-all": "gushio gushio/target-release.js 'configuration production' all",
     "set-target-arm64": "gushio gushio/set-target-arch.js arm64",
-    "set-target-x64": "gushio gushio/set-target-arch.js x64"
+    "set-target-x64": "gushio gushio/set-target-arch.js x64",
+    "nightly": "gushio gushio/target-nightly.js"
   },
   "build": {
     "publish": [
