--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -9,8 +9,7 @@ env:
   INTEGRATION_TEST_ENVIRONMENT: ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
 
 jobs:
-
-  integration-test-macos:
+  integration-test-macos-1:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +25,19 @@ jobs:
         run: |
           npm run --prefix packages/desktop-app integration-test-1
 # try to delete leapp.lock
+
+
+  integration-test-macos-2:
+    runs-on: macos-12
+    steps:
+      - uses: actions/checkout@v3
+      - name: Checkout
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          cd packages/desktop-app
+          npm run build-dev
+          npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
       - name: Test 2 macOS desktop app
         run: |
