--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -22,13 +22,29 @@ jobs:
           npm run build-dev
           npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
+      - name: Screenshot before
+      - uses: OrbitalOwen/desktop-screenshot-action@0.1
+        with:
+          file-name: 'before.jpg'
+
       - name: Test 1 macOS desktop app
         run: |
+          px -aux > ps-before.txt
           npm run --prefix packages/desktop-app integration-test-1
-          ls ~/.Leapp/
-          rm ~/.Leapp/Leapp-lock.json
-          rm ~/.Leapp/Leapp-lock.backup.bin
-          ls ~/.Leapp/
+          px -aux > ps-after.txt
+
+      - name: Screenshot after
+      - uses: OrbitalOwen/desktop-screenshot-action@0.1
+        with:
+          file-name: 'after.jpg'
+
+      - name: Save artifacts
+      - uses: actions/upload-artifact@v3
+        with:
+          name: before-and-after
+          path: |
+            *.jpg
+            *.txt
 
       - name: Test 2 macOS desktop app
         run: |
