--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -14,7 +14,6 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
-
       - name: Bootstrap and build
         run: |
           npm run bootstrap
@@ -23,16 +22,22 @@ jobs:
           npm run build-dev
           npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
-      - uses: nanasess/setup-chromedriver@v1
-        with:
-          chromedriver-version: '94.0.4606.113'
+      - name: Test macOS desktop app
+        run: |
+          npm run --prefix packages/desktop-app integration-test-1
+
+      - uses: AutoModality/action-clean@v1
+      - uses: actions/checkout@v3
+      - name: Bootstrap and build
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          cd packages/desktop-app
+          npm run build-dev
+          npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
       - name: Test macOS desktop app
         run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
-          npm run --prefix packages/desktop-app integration-test-1
           npm run --prefix packages/desktop-app integration-test-2
 
 #  integration-test-win:
