--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -22,21 +22,10 @@ jobs:
           npm run build-dev
           npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
-      - name: Test 1 macOS desktop app
+      - name: Test macOS desktop app
         run: |
           npm run --prefix packages/desktop-app integration-test-1
-          cat ~/electronUserDataPath
-          CHROME_CACHE_PATH=$(cat ~/electronUserDataPath)
-          rm -rf $CHROME_CACHE_PATH
-
-      - name: Test 2 macOS desktop app
-        run: |
           npm run --prefix packages/desktop-app integration-test-2
-
-      - name: Print electronUserDataPath
-        if: always()
-        run: |
-          cat ~/electronUserDataPath
 
 #  integration-test-win:
 #    runs-on: windows-latest
