--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,6 +57,8 @@
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
     "@types/aws-sdk": "^2.7.0",
+    "@types/babel__core": "7.1.18",
+    "@types/babel__traverse": "7.14.2",
     "@types/jest": "^27.4.1",
     "aws-cdk": "2.31.0",
     "aws-cdk-lib": "2.31.0",
