--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -169,6 +169,7 @@
     "copy-dir": "~1.3.0",
     "crypto-js": "4.1.1",
     "date-fns": "^2.26.0",
+    "electron-context-menu": "^3.6.1",
     "electron-default-menu": "~1.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-localshortcut": "^3.2.1",
