--- a/packages/desktop-app/angular.json
+++ b/packages/desktop-app/angular.json
@@ -46,10 +46,10 @@
             "allowedCommonJsDependencies": ["stream", "assert", "fs", "@noovolari/leapp-core"]
           },
           "configurations": {
-            "staging": {
+            "development": {
               "optimization": false,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -83,7 +83,7 @@
               ]
             }
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
