--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -157,6 +157,7 @@
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
     "@noovolari/leapp-core": "0.1.135",
+    "@sentry/angular-ivy": "^7.52.1",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
