--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
   "peerDependencies": {
     "@azure/msal-node": "^1.9.0",
     "@babel/plugin-proposal-decorators": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/aws-sdk": "^2.7.0",
     "@types/node": "^16.9.4",
     "@types/node-ipc": "9.2.0",
