--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -15,6 +15,7 @@ env:
   S3_BUCKET: s3://noovolari-leapp-website-distribution
   WIN_CERTIFICATE: ${{ secrets.WIN_CERTIFICATE }}
   WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
+  TEAM_REPOSITORY: ${{ secrets.TEAM_REPOSITORY }}
 
 jobs:
   tag-validation:
@@ -61,6 +62,20 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features
+
       - name: Build Win desktop app
         shell: bash
         run: |
@@ -101,6 +116,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features
+
       - name: Build Linux desktop app
         run: |
           cd packages/desktop-app
@@ -131,6 +160,20 @@ jobs:
     if: needs.tag-validation.outputs.validator == 1
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features
 
       - name: Build macOS x64 desktop app
         uses: nick-fields/retry@v2
@@ -201,6 +244,20 @@ jobs:
     if: needs.tag-validation.outputs.validator == 1
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: LPTM-203-how-to-integrate-leapp-team-core-in-open-source-repository
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features
 
       - name: Build macOS arm64 desktop app
         uses: nick-fields/retry@v2
