--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,8 @@
     "zlib": "~1.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@commitlint/cli": "16.2.1",
